# RingModulator

./: CMakeLists.txt  README.md  ringmod.ini
.claude/: settings.json
.github/workflows/: compile.yml  lint.yml  release.yml
Futuristic Audio Filter GUI/src/: App.tsx  index.css
assets/: JUCE Plugin Development Overview.docx
examples/: sample_ringMod.xrns
installer/: RingMod.wxs
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ringmod.code-workspace
